<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
android:background="@drawable/bg_white_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_gradient_header_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/header_txt_padding"
            android:text="@string/initialization"
            android:textAppearance="@style/white_text_appearance"
            android:textSize="@dimen/header_bar_text_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/cayanimageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo"  />

            <com.android.support.MyEditText
                android:id="@+id/initAccountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:digits="0123456789"
                android:ems="10"
                android:hint="@string/check_account_number"
                android:imeOptions="flagNoExtractUi"
                android:inputType="number"
                android:singleLine="true"
                android:textAppearance="@style/black_text_appearance_unbold"
                android:textColor="#000000"
                android:textSize="@dimen/field_text_size" />

            <com.android.support.MyEditText
                android:id="@+id/initPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword|textNoSuggestions"
                android:singleLine="true"
                android:textAppearance="@style/black_text_appearance_unbold"
                android:textColor="#000000"
                android:textSize="@dimen/field_text_size" />

            <Button
                android:id="@+id/loginButton"
                style="@style/action_button_text_appearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/action_button_selector"
                android:ems="6"
                android:paddingLeft="5dp"
                android:paddingRight="14dp"
                android:text="@string/login"
                android:textSize="@dimen/large_button_text_size" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:src="@drawable/enabler" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>