<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_page"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_gradient_header_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/header_txt_padding"
            android:text="@string/password_configuration"
            android:textAppearance="@style/white_text_appearance"
            android:textSize="@dimen/header_txt_size" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/application_password"
                android:textAppearance="@style/black_text_appearance"
                android:textSize="@dimen/field_section_text_size" />

            <com.android.support.MyEditText
                android:id="@+id/regPassword1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword|textNoSuggestions"
                android:singleLine="true"
                android:textAppearance="@style/black_text_appearance_unbold"
                android:textColor="#000000"
                android:textSize="@dimen/field_text_size" />

            <com.android.support.MyEditText
                android:id="@+id/regPassword2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/reenter_password"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPassword|textNoSuggestions"
                android:singleLine="true"
                android:textAppearance="@style/black_text_appearance_unbold"
                android:textColor="#000000"
                android:textSize="@dimen/field_text_size" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password_five_char_long"
                android:textAppearance="@style/black_text_appearance_unbold"
                android:textSize="@dimen/fineprint_text_size" />

            <Button
                android:id="@+id/setPasswordButton"
                style="@style/action_button_text_appearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/action_button_selector"
                android:ems="8"
                android:paddingLeft="5dp"
                android:paddingRight="14dp"
                android:text="@string/set_password"
                android:textSize="@dimen/large_button_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>