...
    <string name="enter_password">Enter Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="invalid_password">Invalid Password, Try again\u002E\u002E\u002E</string>
    <string name="cc_offline">CC Offline</string>

    <string name="enter_price">Enter Price</string>
    <string name="ok">OK</string>
    <string name="warning_empty_products">No Products have been added, try again</string>
    <string name="warning_signature_required">Signature Require Mode Is Enabled, Please Enter Signature</string>
    <string name="warning_no_customer_selected">No Customer Selected</string>
    <string name="warning_title">Warning</string>
    <string name="warning_exit_now">Are you sure you want to exit?</string>
    <string name="warning_email_invalid">Invalid e-mail address, try again.</string>
...
    <string name="title_activity_bixolon_transactions">BixolonTransactionsActivity</string>
    <string name="failed">Failed</string>
    <string name="no_transaction_found">No Transaction Found.</string>
    <string name="print_z_report">Print Report Z</string>
    <string name="print_x_report">Print Report X</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="initialization">Initialization</string>
    <string name="reload">Reload</string>
    <string name="set_password">Set Password</string>
    <string name="application_password">Application Password</string>
    <string name="select_employee">Select Employee</string>
    <string name="password_configuration">Password Setup</string>
    <string name="even_amount">Even</string>
    <string name="shortage_overage_amount">Cash Overage/Shortage</string>
    <string name="from">From:</string>
...
