<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/employeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColor="#000000"
        android:text="TextView" 
        style="@style/text_shadow"
     	android:textAppearance="@style/black_text_appearance_unbold"
        android:textSize="@dimen/listview_text_size"/>

</LinearLayout>